chore: [all] Tiny improvements
* Use UseZGC GC